qterminal-2.0.1 / 2024-06-27
=============================
 * Single instance for drop-down mode.
 * Used layer shell for the drop-down mode under Wayland.
 * Prevented a crash on entering `exit` when bookmark dock is shown.
 * Fixed the window height in drop-down mode.
 * Set `QTERMWIDGET_MINIMUM_VERSION`, which was missing after Qt6 port.

qterminal-2.0.0 / 2024-05-17
=============================
 * Ported to Qt6.
 * Initialized some variables.
 * Initialized some members in constructors.
 * Removed a duplicated `#include`.
 * Removed nullity test before deleting a pointer.
 * Used `default` to define trivial constructors.
 * Added word characters option to preferences.
 * Fixed inactive tab text with Qt6.
 * Dropped `qAsConst`.
 * Improved Qt translations loading.
 * Removes unused libraries.
 * Dropped `USE_QTERMWIDGET5/6`.
 * Silenced Qt6 compilation warnings.

qterminal-1.4.0 / 2023-11-05
=============================
 * Handled bell (BEL, '\a') via libcanberra, and added an "Audible bell" option.
 * Use `qWarning().noquote()`.
 * Ported away from deprecated Qt::MidButton.
 * Let the latest QTermWidget library set TERM.
 * Corrected tab order in settings dialog.
 * Removed an unused non POD variable.
 * Supported Putty-style mouse button swap.
 * Avoided a case of null pointer dereference.

qterminal-1.3.0 / 2023-04-15
=============================
 * Specified the parent of the main context menu for correct positioning under Wayland.
 * Improve UX by opening new terminals in current directory by default.
 * Fixed a crash in the dropdown mode under Wayland.
 * Corrected typos.
 * Corrected the license in the meta-info.

qterminal-1.2.0 / 2022-11-05
=============================
 * Add CI using GitHub Actions.
 * Fixed command parsing with the `-e` option.
 * Avoid segfault when using global menus.
 * Improved documentation for the `--profile` option.

qterminal-1.1.0 / 2022-04-15
=============================
 * Updated README.md.